# marketplace

./: Makefile  pyproject.toml  readme.rst
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_profile_date_of_birth_alter_profile_location_and_more.py  0002_seller_under_verification.py  0002_seller_url.py  0003_alter_wishlist_unique_together_alter_wishlist_user_and_more.py
core/templates/: about.html  base.html  business.html  home.html  invest.html  login.html  profile.html  register.html  thank_you.html
core/templates/core/: base.html  cart.html  checkout.html  home.html  login.html  product_detail.html  register.html  search.html  wishlist.html
core/utils/: token_utils.py
marketplace/: settings.py  urls.py
