[project]
name = "marketplace"
version = "0.1.0"
description = "Local Marketplace Ecosystem"
authors = [
    {name = "Laksh",email = "laksh8396@gmail.com"},
    {name = "Diya", email = "rajdiya.456@gmail.com"}
]
readme = "README.rst"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
